# slope-rag-agent

./: README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/api/: server.py
app/core/: config.py  logging.py
app/eval/: eval_runner.py  metrics.py
app/index/: base.py  bm25.py  faiss_index.py
app/ingest/: chunker.py  parser.py
app/llm/: embedding.py  generator.py
app/pipeline/: rag_pipeline.py
app/prompt/: prompt_builder.py
app/search/: rerank.py  retrieve.py
app/tests/: test_pipeline_smoke.py
app/tools/: engineering.py  weather.py
app/utils/: citations.py  tokenizer.py
data/sample_docs/: sample_slope_report.md
docker/: Dockerfile
